Resolved issues issue #5: enhancement: Global enable issue #8: enhancement: Options page

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -5,6 +5,21 @@
 	"extensionDescription": {
 		"message": "Filters out YouTube-Shorts from the home page, subscriptions and search results."
 	},
+	"popupTitle1":{
+		"message": "YouTube-"
+	},
+	"popupTitle2":{
+		"message": "Shorts Filter"
+	},
+	"popupOptions":{
+		"message": "Options"
+	},
+	"popupEnabled":{
+		"message": "Enabled"
+	},
+	"popupDisabled":{
+		"message": "Disabled"
+	},
 	"groupLegendWhitelist": {
 		"message": "Whitelist channels"
 	},
