*) Keep/Remove (white)listed [#6] Change whitelist to list, add an option for the list to function as either a whitelist (keep shorts of channels) or blacklist (remove shorts of channels).
*) En/disable indivitual list items [#7]
Add option to enable or disable individual list items without having to
remove them from the list

*) Redesign the options page
Changed the options page to give it a more modern look, with bigger
page elements

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,38 +1,50 @@
 {
-	"extensionName": {
-		"message": "YouTube-Shorts Filter"
+	"blacklistTitle": {
+		"message": "Blacklisted channels"
+	},
+	"buttonOptions":{
+		"message": "Options"
+	},
+	"checkboxBlacklistMode":{
+		"message": "Blacklist"
+	},
+	"checkboxDisabled":{
+		"message": "Disabled"
+	},
+	"checkboxEnabled":{
+		"message": "Enabled"
+	},
+	"checkboxWhitelistMode":{
+		"message": "Whitelist"
+	},
+	"developer": {
+		"message": "Developed by"
 	},
 	"extensionDescription": {
 		"message": "Filters out YouTube-Shorts from the home page, subscriptions and search results."
 	},
-	"popupTitle1":{
+	"extensionName": {
+		"message": "YouTube-Shorts Filter"
+	},
+	"extensionNameLine1":{
 		"message": "YouTube-"
 	},
-	"popupTitle2":{
+	"extensionNameLine2":{
 		"message": "Shorts Filter"
 	},
-	"popupOptions":{
-		"message": "Options"
-	},
-	"popupEnabled":{
-		"message": "Enabled"
-	},
-	"popupDisabled":{
-		"message": "Disabled"
-	},
-	"groupLegendWhitelist": {
-		"message": "Whitelist channels"
-	},
-	"channelNameLabel": {
-		"message": "Enter a channel name"
-	},
-	"addButton": {
+	"listAddButton": {
 		"message": "Add"
 	},
-	"removeButton": {
+	"listAddText": {
+		"message": "Enter a channel title or id"
+	},
+	"listRemoveButton": {
 		"message": "Remove"
 	},
 	"version": {
 		"message": "Version"
+	},
+	"whitelistTitle": {
+		"message": "Whitelisted channels"
 	}
 }
